<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/cerebra"
    android:orientation="vertical" >
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Welcome_Text"
	    android:textSize="30dip"
	    android:textStyle="bold"
	    android:id="@+id/welcome_text"
	    android:layout_gravity="center"
	    android:layout_marginBottom="10dip"
	/>
	<Button 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/new_user"
	    android:id="@+id/newu"
	    android:layout_marginBottom="10dip"
	/>
	<Button 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/existing_user"
	    android:id="@+id/existingu"
	/>
</LinearLayout>